More updates after having gone through the HoL